--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "start": "",
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "mocha ./test/**/*.js"
   }
