--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,12 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "dotenv": "^8.2.0",
     "mocha": "^7.1.2",
     "nodemon": "^2.0.4"
   },
